--- a/comingsoon_templates/index.html
+++ b/comingsoon_templates/index.html
@@ -32,8 +32,8 @@
        <h1>Coming Soon Templates</h1>
         <div style="text-align: center">
             <div class="boxed"><a href="Templates_1/index.html" target="_blank">Template 1</a></div>
-            <div class="boxed"><a href="/comingsoon_templates/Templates_2/index.html" target="_blank">Template 2</a></div>
-            <div class="boxed"><a href="/comingsoon_templates/Templates_3/index.html" target="_blank">Template 3</a></div>
+            <div class="boxed"><a href="Templates_2/index.html" target="_blank">Template 2</a></div>
+            <div class="boxed"><a href="Templates_3/index.html" target="_blank">Template 3</a></div>
         </div>
    </section>
     
